Improves readability of rounding value, adds rounding to prevent long decimals as result of binary. Overall slight improvement of rounding UI/UX.

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -56,6 +56,12 @@ div#overall_rounding {
     display: inline-block;
 }
 
+#overall_rounding a, #overall_rounding a:visited, #overall_rounding a:hover {
+    background-color: white;
+    padding: 2px;
+    color: #4c4b4b;
+}
+
 div#processing {
     float: left;
     margin: 5px auto;
